[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-image-studio"
version = "0.1.0"
description = "Studio personale per generare immagini, ispirato al flusso di lavoro di Fooocus"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Aless" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
